fix: horizontal scroll bar on mobile
It appears that:
- some long code in text like `schematics @angular/schematics` was not split and was overflowing. Fixed with `word-wrap: break-word`;
- there was a weird margin/padding thing that did not compensate each other. Fixed by tweaking the negative margin.
- the home image had a fixed width. Fixed with a responsive image (1/3 of the content in large screen, 1/2 in medium, and 2/3 in small).

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -22,7 +22,7 @@ a:hover, a.page-link:hover {
 
 .content {
   padding: 20px;
-  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
+  margin: 0 -10px; /* negative indent the amount of the padding to maintain the grid system */
 }
 
 .post-title {
@@ -100,6 +100,7 @@ pre, code {
   line-height: 1.3rem;
   text-align: left;
   word-spacing: normal;
+  word-wrap: break-word;
   color: #555555;
 }
 
